[gd_scene load_steps=4 format=3 uid="uid://kspnqxcg2srx"]

[ext_resource type="Script" path="res://scripts/world/zombie.gd" id="1_0fkhx"]
[ext_resource type="PackedScene" uid="uid://dluwqd7gpibdt" path="res://blender_meshes/zombie.blend" id="1_7ms5u"]
[ext_resource type="FontFile" uid="uid://djy5hbxhwysyd" path="res://assets/font/VCR_OSD_MONO_1.001.ttf" id="3_yudlc"]

[node name="Zombie" type="Node3D"]
script = ExtResource("1_0fkhx")

[node name="ZombieBody" parent="." instance=ExtResource("1_7ms5u")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.024, 0.889, 0.128)

[node name="Skeleton3D" parent="ZombieBody/Armature" index="0"]
bones/0/rotation = Quaternion(0.0131858, -1.12461e-27, -1.43476e-18, 0.999911)
bones/1/rotation = Quaternion(0.0587974, -0.500871, -0.805679, 0.310729)
bones/2/position = Vector3(0.281416, -0.119749, -0.0367765)
bones/2/rotation = Quaternion(0.0293263, -0.0575896, 0.982061, -0.177144)
bones/3/rotation = Quaternion(0.17936, 0.433961, 0.83, 0.30101)
bones/4/position = Vector3(-0.293478, -0.11363, 0.0286077)
bones/4/rotation = Quaternion(-0.0541645, 0.0973444, 0.982376, 0.150096)

[node name="WordLabelContainer" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.808655, 0.851094)

[node name="ActiveWordLabel" type="Label3D" parent="WordLabelContainer"]
modulate = Color(0.882353, 0.0235294, 0.184314, 1)
font = ExtResource("3_yudlc")
font_size = 160
outline_size = 0
horizontal_alignment = 2
justification_flags = 131
width = 1000.0

[node name="NonActiveWordLabel" type="Label3D" parent="WordLabelContainer"]
font = ExtResource("3_yudlc")
font_size = 160
outline_size = 0
horizontal_alignment = 0
justification_flags = 131
width = 1000.0

[editable path="ZombieBody"]
